Added placeholder values

--- a/repository/liquibase.properties
+++ b/repository/liquibase.properties
@@ -1,8 +1,8 @@
 # Liquibase properties file
 
-url=jdbc:mysql://${MYSQL_HOST}/cfsellers
-username=${MYSQL_USER}
-password=${MYSQL_PASSWORD}
+url=jdbc:mysql://1309741dad36/cfsellers
+username=root
+password=password
 changeLogFile=changelog.xml
 driver=com.mysql.cj.jdbc.Driver
 classpath=mysql-connector-j-8.0.33.jar
