--- a/repository/liquibase.properties
+++ b/repository/liquibase.properties
@@ -1,6 +1,6 @@
 # Liquibase properties file
 
-url=jdbc:mysql://1309741dad36:3306/cfsellers
+url=jdbc:mysql://172.17.0.2:3306/cfsellers
 username=root
 password=password
 changeLogFile=changelog.xml
