--- a/repository/liquibase.properties
+++ b/repository/liquibase.properties
@@ -1,8 +1,6 @@
-# Liquibase properties file
-
-url=jdbc:mysql://172.17.0.2:3306/cfsellers
-username=root
-password=password
+url=jdbc:mysql://${MYSQL_HOST}/cfsellers
+username=${MYSQL_USER}
+password=${MYSQL_PASSWORD}
 changeLogFile=changelog.xml
 driver=com.mysql.cj.jdbc.Driver
 classpath=mysql-connector-j-8.0.33.jar
