--- a/repository/liquibase.properties
+++ b/repository/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://${MYSQL_HOST}/cfsellers
+url=jdbc:mysql://172.17.0.2:3306/cfsellers
 username=${MYSQL_USER}
 password=${MYSQL_PASSWORD}
 changeLogFile=changelog.xml
